--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
     },
     "cypress-cucumber-preprocessor": {
         "step_definitions": "cypress/support/steps"
+    },
+    "dependencies": {
+        "cypress": "^8.6.0"
+    },
+    "devDependencies": {
+        "cypress-cucumber-preprocessor": "^4.3.0"
     }
 }
